--- a/deploy/prod/hub/kustomization.yaml
+++ b/deploy/prod/hub/kustomization.yaml
@@ -2,19 +2,11 @@ resources:
 - ../../dev/hub/
 
 images:
-- name: ko://github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-proxyserver
-  newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: 0.0.1
 - name: ko://github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-controller
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: 0.0.1
-
-secretGenerator:
-- name: acm-image-pull-secret
-  namespace: open-cluster-management
-  literals:
-  - .dockerconfigjson=<AUTH INFO>
-  type: "kubernetes.io/dockerconfigjson"
-
-patchesStrategicMerge:
-- serviceaccount-patch.yaml
+  newTag: latest
+- name: ko://github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-proxyserver
+  newName: quay.io/open-cluster-management/multicloud-manager
+  newTag: latest
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
