--- a/deploy/foundation/klusterlet/kustomization.yaml
+++ b/deploy/foundation/klusterlet/kustomization.yaml
@@ -1,8 +1,9 @@
 resources:
-- ../../dev/klusterlet/
+- resources/cluster-namespace.yaml
+- resources/agent-manifestwork.yaml
 
 images:
-- name: ko://github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-agent
+- name: acm-agent
   newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
