--- a/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
+++ b/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
@@ -78,7 +78,7 @@ spec:
                 secretName: hub-kubeconfig-secret
             containers:
             - name: acm-agent
-              image: quay.io/open-cluster-management/multicloud-manager
+              image: acm-agent
               imagePullPolicy: IfNotPresent
               args:
                 - "/acm-agent"
