foundation need run as user instead of root

--- a/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
+++ b/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
@@ -72,6 +72,8 @@ spec:
               app: acm-agent
           spec:
             serviceAccountName: acm-agent-sa
+            securityContext:
+              runAsNonRoot: true
             volumes:
             - name: hub-config
               secret:
