--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ generate_exes
 generate_files
 .idea
 .ko.yaml
-acm-agent
-acm-controller
-acm-proxyserver
-acm-webhook
+agent
+controller
+proxyserver
+webhook
 registration-operator
 e2e.test
