--- a/deploy/foundation/hub/kustomization.yaml
+++ b/deploy/foundation/hub/kustomization.yaml
@@ -13,10 +13,10 @@ resources:
 - resources/controller.yaml
 
 images:
-- name: acm-controller
+- name: foundation-controller
   newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
-- name: acm-proxyserver
+- name: foundation-proxyserver
   newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
