--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: acm-foundation-sa
+  name: foundation-hub-sa
   namespace: open-cluster-management
 
 ---
   kind: ClusterRole
   apiVersion: rbac.authorization.k8s.io/v1
   metadata:
-    name: acm-foundation
+    name: foundation-hub
   rules:
     - apiGroups: [""]
       resources: ["configmaps", "namespaces", "events", "endpoints", "secrets"]
@@ -61,12 +61,12 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: acm-foundation
+  name: foundation-hub
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: acm-foundation
+  name: foundation-hub
 subjects:
   - kind: ServiceAccount
-    name: acm-foundation-sa
+    name: foundation-hub-sa
     namespace: open-cluster-management
