--- a/deploy/foundation/hub/resources/proxyserver-apiservice.yaml
+++ b/deploy/foundation/hub/resources/proxyserver-apiservice.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1beta1
   service:
     namespace: open-cluster-management
-    name: acm-proxyserver
+    name: foundation-proxyserver
   insecureSkipTLSVerify: true
   groupPriorityMinimum: 10000
   versionPriority: 20
