--- a/deploy/foundation/hub/resources/proxyserver.yaml
+++ b/deploy/foundation/hub/resources/proxyserver.yaml
@@ -1,27 +1,27 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: acm-proxyserver
+  name: foundation-proxyserver
   namespace: open-cluster-management
   labels:
-    app: acm-proxyserver
+    app: foundation-proxyserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: acm-proxyserver
+      app: foundation-proxyserver
   template:
     metadata:
       labels:
-        app: acm-proxyserver
+        app: foundation-proxyserver
     spec:
-      serviceAccountName: acm-foundation-sa
+      serviceAccountName: foundation-hub-sa
       containers:
-      - name: acm-proxyserver
-        image: acm-proxyserver
+      - name: foundation-proxyserver
+        image: foundation-proxyserver
         imagePullPolicy: IfNotPresent
         args:
-          - "/acm-proxyserver"
+          - "/proxyserver"
           - "--agent-cert-dir=/tmp/agent-cert"
           - "--cert-dir=/tmp/cert"
           - "--secure-port=6443"
