--- a/examples/view/getdeployment.yaml
+++ b/examples/view/getdeployment.yaml
@@ -9,5 +9,5 @@ metadata:
 spec:
   scope:
     resource: deployments
-    name: acm-proxyserver
+    name: foundation-proxyserver
     namespace: open-cluster-management
