--- a/deploy/foundation/hub/resources/proxyserver.yaml
+++ b/deploy/foundation/hub/resources/proxyserver.yaml
@@ -22,6 +22,8 @@ spec:
         imagePullPolicy: IfNotPresent
         args:
           - "/acm-proxyserver"
+          - "--agent-cert-dir=/tmp/agent-cert"
+          - "--cert-dir=/tmp/cert"
           - "--secure-port=6443"
         livenessProbe:
           httpGet:
