add clusterID label for managedCluster

--- a/deploy/foundation/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
+++ b/deploy/foundation/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
@@ -54,6 +54,9 @@ spec:
               description: CloudVendor describes the cloud provider for the managed
                 cluster.
               type: string
+            clusterID:
+              description: ClusterID is the identifier of managed cluster
+              type: string
             conditions:
               description: Conditions contains condition information for a managed
                 cluster
