fix clusterset clusterrolebinding permission

--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -19,7 +19,7 @@ metadata:
       verbs: ["get", "list", "watch", "create", "update", "delete"]
     - apiGroups: ["rbac.authorization.k8s.io"]
       resources: ["clusterroles","clusterrolebindings"]
-      verbs: ["get", "list", "watch", "create", "update", "delete", "escalate"]
+      verbs: ["get", "list", "watch", "create", "update", "delete", "escalate", "bind"]
     - apiGroups: ["authorization.k8s.io"]
       resources: ["subjectaccessreviews"]
       verbs: ["get", "create"]
