--- a/deploy/foundation/hub/resources/crds/hive.openshift.io_syncsets.yaml
+++ b/deploy/foundation/hub/resources/crds/hive.openshift.io_syncsets.yaml
@@ -10,9 +10,11 @@ spec:
     listKind: SyncSetList
     plural: syncsets
     shortNames:
-      - ss
+    - ss
     singular: syncset
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: SyncSet is the Schema for the SyncSet API
@@ -47,10 +49,10 @@ spec:
                 such as the ability to remove annotations, labels, and other map entries
                 in general.
               enum:
-                - ""
-                - Apply
-                - CreateOnly
-                - CreateOrUpdate
+              - ""
+              - Apply
+              - CreateOnly
+              - CreateOrUpdate
               type: string
             clusterDeploymentRefs:
               description: ClusterDeploymentRefs is the list of LocalObjectReference
@@ -94,10 +96,10 @@ spec:
                       (default), "json", or "merge".
                     type: string
                 required:
-                  - apiVersion
-                  - kind
-                  - name
-                  - patch
+                - apiVersion
+                - kind
+                - name
+                - patch
                 type: object
               type: array
             resourceApplyMode:
@@ -131,7 +133,7 @@ spec:
                           to be the same namespace as the syncset with the reference.
                         type: string
                     required:
-                      - name
+                    - name
                     type: object
                   targetRef:
                     description: TargetRef specifies the target name and namespace
@@ -146,24 +148,24 @@ spec:
                           to be the same namespace as the syncset with the reference.
                         type: string
                     required:
-                      - name
+                    - name
                     type: object
                 required:
-                  - sourceRef
-                  - targetRef
+                - sourceRef
+                - targetRef
                 type: object
               type: array
           required:
-            - clusterDeploymentRefs
+          - clusterDeploymentRefs
           type: object
         status:
           description: SyncSetStatus defines the observed state of a SyncSet
           type: object
   version: v1
   versions:
-    - name: v1
-      served: true
-      storage: true
+  - name: v1
+    served: true
+    storage: true
 status:
   acceptedNames:
     kind: ""
