add clusterview api to list managedclusterset

--- a/deploy/foundation/hub/kustomization.yaml
+++ b/deploy/foundation/hub/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 - resources/proxyserver.yaml
 - resources/controller.yaml
 - resources/clusterviewv1-apiservice.yaml
-
+- resources/clusterviewv1alpha1-apiservice.yaml
 
 images:
 - name: foundation-controller
