--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -48,7 +48,7 @@ metadata:
       resources: ["clusterstatuses/aggregator"]
       verbs: ["get", "create"]
     - apiGroups: ["hive.openshift.io"]
-      resources: ["clusterdeployments", "machinepools", "syncsets"]
+      resources: ["clusterdeployments", "clusterpools", "clusterclaims", "machinepools", "syncsets"]
       verbs: ["update", "get", "list", "watch"]
     - apiGroups: ["hiveinternal.openshift.io"]
       resources: ["clustersyncs"]
