Query prom to get socket/core

--- a/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
+++ b/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
@@ -81,7 +81,7 @@ spec:
             containers:
             - name: foundation-agent
               image: foundation-agent
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: Always
               args:
                 - "/agent"
                 - "--hub-kubeconfig=/var/run/hub/kubeconfig"
