--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -35,6 +35,9 @@ metadata:
     - apiGroups: ["cluster.open-cluster-management.io"]
       resources: ["managedclusters","managedclustersets"]
       verbs: ["get", "list", "watch", "update"]
+    - apiGroups: ["cluster.open-cluster-management.io"]
+      resources: ["managedclusters/status"]
+      verbs: ["update", "patch"]
     - apiGroups: ["action.open-cluster-management.io"]
       resources: ["managedclusteractions", "managedclusteractions/status"]
       verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
