--- a/examples/view/getdeployment.yaml
+++ b/examples/view/getdeployment.yaml
@@ -1,13 +1,11 @@
-# This resourceview is to get node with lable role=master from all clusters
+# This view is used to get the deployment in cluster1
 apiVersion: view.open-cluster-management.io/v1beta1
 kind: ManagedClusterView
 metadata:
-  labels:
-    name: getdeployment
   name: getdeployment
   namespace: cluster1
 spec:
   scope:
     resource: deployments
-    name: foundation-proxyserver
-    namespace: open-cluster-management
+    name: foundation-agent
+    namespace: open-cluster-management-agent
