--- a/deploy/foundation/hub/resources/crds/hive.openshift.io_clusterpools.yaml
+++ b/deploy/foundation/hub/resources/crds/hive.openshift.io_clusterpools.yaml
@@ -52,6 +52,13 @@ spec:
         spec:
           description: ClusterPoolSpec defines the desired state of the ClusterPool.
           properties:
+            annotations:
+              additionalProperties:
+                type: string
+              description: Annotations to be applied to new ClusterDeployments created
+                for the pool. ClusterDeployments that have already been claimed will
+                not be affected when this value is modified.
+              type: object
             baseDomain:
               description: BaseDomain is the base domain to use for all clusters created
                 in this pool.
@@ -128,8 +135,7 @@ spec:
               properties:
                 agentBareMetal:
                   description: AgentBareMetal is the configuration used when performing
-                    an Assisted Agent based installation to bare metal. Can only be
-                    used with the Assisted InstallStrategy.
+                    an Assisted Agent based installation to bare metal.
                   properties:
                     agentSelector:
                       description: AgentSelector is a label selector used for associating
@@ -177,14 +183,6 @@ spec:
                             only "value". The requirements are ANDed.
                           type: object
                       type: object
-                    apiVIP:
-                      description: APIVIP is the virtual IP used to reach the OpenShift
-                        cluster's API.
-                      type: string
-                    ingressVIP:
-                      description: IngressVIP is the virtual IP used for cluster ingress
-                        traffic.
-                      type: string
                   required:
                   - agentSelector
                   type: object
