--- a/deploy/foundation/hub/resources/proxyserver-apiservice.yaml
+++ b/deploy/foundation/hub/resources/proxyserver-apiservice.yaml
@@ -2,12 +2,13 @@ apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   name: v1beta1.proxy.open-cluster-management.io
+  annotations:
+    "service.beta.openshift.io/inject-cabundle": "true"
 spec:
   group: proxy.open-cluster-management.io
   version: v1beta1
   service:
     namespace: open-cluster-management
     name: foundation-proxyserver
-  insecureSkipTLSVerify: true
   groupPriorityMinimum: 10000
   versionPriority: 20
