--- a/deploy/foundation/hub/resources/clusterviewv1alpha1-apiservice.yaml
+++ b/deploy/foundation/hub/resources/clusterviewv1alpha1-apiservice.yaml
@@ -9,6 +9,6 @@ spec:
   version: v1alpha1
   service:
     namespace: open-cluster-management
-    name: foundation-proxyserver
+    name: ocm-proxyserver
   groupPriorityMinimum: 10
   versionPriority: 20
