--- a/deploy/foundation/hub/resources/controller.yaml
+++ b/deploy/foundation/hub/resources/controller.yaml
@@ -1,24 +1,24 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: foundation-controller
+  name: ocm-controller
   namespace: open-cluster-management
   labels:
-    app: foundation-controller
+    app: ocm-controller
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: foundation-controller
+      app: ocm-controller
   template:
     metadata:
       labels:
-        app: foundation-controller
+        app: ocm-controller
     spec:
       serviceAccountName: foundation-hub-sa
       containers:
-      - name: foundation-controller
-        image: foundation-controller
+      - name: ocm-controller
+        image: ocm-controller
         imagePullPolicy: IfNotPresent
         args:
           - "/controller"
