--- a/deploy/foundation/hub/resources/webhook/kustomization.yaml
+++ b/deploy/foundation/hub/resources/webhook/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - webhook-validating-config.yaml
 
 images:
-- name: foundation-webhook
+- name: ocm-webhook
   newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
