--- a/deploy/foundation/hub/resources/webhook/webhook-service.yaml
+++ b/deploy/foundation/hub/resources/webhook/webhook-service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    "service.beta.openshift.io/serving-cert-secret-name": foundation-webhook
+    "service.beta.openshift.io/serving-cert-secret-name": ocm-webhook
   labels:
-    app: foundation-webhook
-  name: foundation-webhook
+    app: ocm-webhook
+  name: ocm-webhook
   namespace: open-cluster-management
 spec:
   ports:
@@ -13,5 +13,5 @@ spec:
       protocol: TCP
       targetPort: 8000
   selector:
-    app: foundation-webhook
+    app: ocm-webhook
   type: ClusterIP
