--- a/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
+++ b/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
@@ -1,19 +1,19 @@
 apiVersion: work.open-cluster-management.io/v1
 kind: ManifestWork
 metadata:
-  name: deploy-foundation-agent
+  name: klusterlet-addon-workmgr
 spec:
   workload:
     manifests:
     - kind: ServiceAccount
       apiVersion: v1
       metadata:
-        name: foundation-agent-sa
+        name: klusterlet-addon-workmgr-sa
         namespace: open-cluster-management-agent
     - kind: ClusterRole
       apiVersion: rbac.authorization.k8s.io/v1
       metadata:
-        name: foundation-agent
+        name: klusterlet-addon-workmgr
       rules:
       - apiGroups:
           - '*'
@@ -28,19 +28,19 @@ spec:
     - kind: ClusterRoleBinding
       apiVersion: rbac.authorization.k8s.io/v1
       metadata:
-        name: foundation-agent
+        name: klusterlet-addon-workmgr
       roleRef:
         apiGroup: rbac.authorization.k8s.io
         kind: ClusterRole
-        name: foundation-agent
+        name: klusterlet-addon-workmgr
       subjects:
         - kind: ServiceAccount
-          name: foundation-agent-sa
+          name: klusterlet-addon-workmgr-sa
           namespace: open-cluster-management-agent
     - kind: Service
       apiVersion: v1
       metadata:
-        name: foundation-agent
+        name: klusterlet-addon-workmgr
         namespace: open-cluster-management-agent
         labels:
           app: work-manager
@@ -56,7 +56,7 @@ spec:
     - kind: Deployment
       apiVersion: apps/v1
       metadata:
-        name: foundation-agent
+        name: klusterlet-addon-workmgr
         namespace: open-cluster-management-agent
         labels:
           app: work-manager
@@ -70,7 +70,7 @@ spec:
             labels:
               app: work-manager
           spec:
-            serviceAccountName: foundation-agent-sa
+            serviceAccountName: klusterlet-addon-workmgr-sa
             securityContext:
               runAsNonRoot: true
             volumes:
@@ -78,15 +78,15 @@ spec:
               secret:
                 secretName: hub-kubeconfig-secret
             containers:
-            - name: foundation-agent
-              image: foundation-agent
+            - name: klusterlet-addon-workmgr
+              image: klusterlet-addon-workmgr
               imagePullPolicy: IfNotPresent
               args:
                 - "/agent"
                 - "--hub-kubeconfig=/var/run/hub/kubeconfig"
                 - "--cluster-name=cluster1"
                 - "--port=4443"
-                - "--agent-address=foundation-agent.open-cluster-management-agent.svc"
+                - "--agent-address=klusterlet-addon-workmgr.open-cluster-management-agent.svc"
                 - "--agent-port=443"
                 - "--lease-duration=5"
               volumeMounts:
