--- a/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
+++ b/deploy/foundation/klusterlet/resources/agent-manifestwork.yaml
@@ -80,7 +80,7 @@ spec:
             containers:
             - name: klusterlet-addon-workmgr
               image: klusterlet-addon-workmgr
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: Always
               args:
                 - "/agent"
                 - "--hub-kubeconfig=/var/run/hub/kubeconfig"
