--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -11,7 +11,7 @@ metadata:
   metadata:
     name: foundation-hub
   rules:
-    - apiGroups: [""]
+    - apiGroups: ["","events.k8s.io"]
       resources: ["configmaps", "namespaces", "events", "endpoints", "secrets"]
       verbs: ["get", "list", "watch", "create", "update", "delete", "deletecollection", "patch"]
     - apiGroups: ["rbac.authorization.k8s.io"]
@@ -33,11 +33,14 @@ metadata:
       resources: ["deployables", "deployables/status"]
       verbs: ["get", "list", "watch", "update", "patch"]
     - apiGroups: ["cluster.open-cluster-management.io"]
-      resources: ["managedclusters","managedclustersets"]
+      resources: ["managedclusters","managedclustersets","placementdecisions","placementdecisions/status"]
       verbs: ["get", "list", "watch", "update"]
     - apiGroups: ["cluster.open-cluster-management.io"]
       resources: ["managedclusters/status"]
       verbs: ["update", "patch"]
+    - apiGroups: [ "imageregistry.open-cluster-management.io" ]
+      resources: [ "managedclusterimageregistries","managedclusterimageregistries/status" ]
+      verbs: ["get", "list", "watch", "update"]
     - apiGroups: ["action.open-cluster-management.io"]
       resources: ["managedclusteractions", "managedclusteractions/status"]
       verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
