--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -33,11 +33,14 @@ metadata:
       resources: ["deployables", "deployables/status"]
       verbs: ["get", "list", "watch", "update", "patch"]
     - apiGroups: ["cluster.open-cluster-management.io"]
-      resources: ["managedclusters","managedclustersets"]
+      resources: ["managedclusters","managedclustersets","placementdecisions","placementdecisions/status"]
       verbs: ["get", "list", "watch", "update"]
     - apiGroups: ["cluster.open-cluster-management.io"]
       resources: ["managedclusters/status"]
       verbs: ["update", "patch"]
+    - apiGroups: [ "cluster.open-cluster-management.io" ]
+      resources: [ "managedclusterimageregistries","managedclusterimageregistries/status" ]
+      verbs: ["get", "list", "watch", "update"]
     - apiGroups: ["action.open-cluster-management.io"]
       resources: ["managedclusteractions", "managedclusteractions/status"]
       verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
