--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -36,6 +36,9 @@ rules:
     resources: ["managedclusters","managedclustersets","placementdecisions","placementdecisions/status"]
     verbs: ["get", "list", "watch", "update"]
   - apiGroups: ["cluster.open-cluster-management.io"]
+    resources: ["managedclustersets/join"]
+    verbs: ["create"]
+  - apiGroups: ["cluster.open-cluster-management.io"]
     resources: ["managedclusters/status"]
     verbs: ["update", "patch"]
   - apiGroups: [ "imageregistry.open-cluster-management.io" ]
